WORKING AT LAST (though hbs still not displaying)

--- a/app/views/ember_cli/ember/index.html.erb
+++ b/app/views/ember_cli/ember/index.html.erb
@@ -5,4 +5,6 @@
     </style>
     <%= csrf_meta_tags %>
   <% end %>
+  <p>Wow</p>
+  Our blog has <%= Article.public_count %> articles and counting!
 <% end %>
